--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div align = "center" class = "obv" >
         <ul>
-<li><a href = "https://www.youtube.com/watch?v=dQw4w9WgXcQ&list=RDdQw4w9WgXcQ&start_radio=1" style="text-decoration: none;">Главная</a></li>
+<li><a href = "https://nikitatransformator.github.io/Sayt" style="text-decoration: none;">Главная</a></li>
 <li><a>|</a></li>
 <li><a href = "https://nikitatransformator.github.io/Main-site" style="text-decoration: none;"> Правила</a></li>
 <li><a>|</a></li>
@@ -334,3 +334,4 @@
 
 </body>
 </html>
+
